--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
                 <span></span>
                 <span></span>
             </div>
-            <nav>
+            <nav id="nav">
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#services">Services</a></li>
@@ -1052,7 +1052,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Ali Tiles Construction. All Rights Reserved.</p>
+                <p>&copy; 2025 Ali Tiles Construction. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
